le menu avec checkbox git add .! und mediaquery

--- a/testmenu.html
+++ b/testmenu.html
@@ -1,45 +1,101 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <link rel="stylesheet" href="css/nav.css"/>
+    <link rel="stylesheet" href="css/nav2.css"/>
     <meta charset="utf-8"/>
   </head>
 
   <body>
     <nav class="menu">
-      <p><a href="#">m</a></p>
-      <ul class="menu">
-        <li><a href="#">Accueil</a></li>
-        <li><a href="#">À propos</a></li>
-        <li><a href="#">Contact</a></li>
-        <li><a href="#">Accueil</a></li>
-        <li><a href="#">À propos</a></li>
-        <li><a href="#">Contact</a></li>
-      </ul>
-    </nav>
+        <label for="tab-0"><p>___<br>___<br>___</p></label>
+        <input type="checkbox" name="tab-0 "id="tab-0">
 
-    <p></p>
+      <ul>
+        <li>
+          <label for="tab-1">titre 1</label>
+          <input type="checkbox" name="tab-1"id="tab-1">
 
-    <nav class="menu">
-      <p><a href="#">m</a></p>
-      <ul class="menu">
-      	<li><a href="#">Lien menu 1</a>
-      		<ul>
-      			<li><a href="#">lien sous menu 1</a></li>
-      			<li><a href="#">lien sous menu 1</a></li>
-      			<li><a href="#">lien sous menu 1</a></li>
-      			<li><a href="#">lien sous menu 1</a></li>
-      		</ul>
-      	</li><!--
-     --><li><a href="#">Lien menu 2</a>
-      		<ul>
-      			<li><a href="#">Lien sous menu 2</a></li>
-      			<li><a href="#">Lien sous menu 2</a></li>
-      			<li><a href="#">Lien sous menu 2</a></li>
-      			<li><a href="#">Lien sous menu 2</a></li>
-      		</ul>
-      	</li>
-      </ul>
+          <ul>
+            <li>
+              <label for="tab-1.1">titre 1.1</label>
+              <input type="checkbox" id="tab-1.1">
+
+              <ul>
+                <li><a href="#">lien sous menu</a></li>
+                <li><a href="#">lien sous menu</a></li>
+                <li><a href="#">lien sous menu</a></li>
+                <li><a href="#">lien sous menu</a></li>
+              </ul>
+            </li>
+            <li>
+              <label for="tab-1.2">titre 1.2</label>
+              <input type="checkbox" id="tab-1.2">
+
+              <ul>
+                <li><a href="#">lien sous menu</a></li>
+                <li><a href="#">lien sous menu</a></li>
+                <li><a href="#">lien sous menu</a></li>
+                <li><a href="#">lien sous menu</a></li>
+              </ul>
+            </li>
+            <li>
+              <label for="tab-1.3">titre 1.3</label>
+              <input type="checkbox" id="tab-1.3">
+
+              <ul>
+                <li><a href="#">lien sous menu</a></li>
+                <li><a href="#">lien sous menu</a></li>
+                <li><a href="#">lien sous menu</a></li>
+                <li><a href="#">lien sous menu</a></li>
+              </ul>
+            </li>
+          </ul>
+        </li>
+        <li>
+          <label for="tab-2">titre 2</label>
+          <input type="checkbox" id="tab-2">
+
+          <ul>
+            <li>
+              <label for="tab-2.1">titre 2.1</label>
+              <input type="checkbox" id="tab-2.1">
+
+            <ul>
+              <li><a href="#">lien sous menu</a></li>
+              <li><a href="#">lien sous menu</a></li>
+              <li><a href="#">lien sous menu</a></li>
+              <li><a href="#">lien sous menu</a></li>
+            </ul>
+          </li>
+          <li>
+            <label for="tab-2.2">titre 2.2</label>
+            <input type="checkbox" id="tab-2.2">
+
+            <ul>
+              <li><a href="#">lien sous menu</a></li>
+              <li><a href="#">lien sous menu</a></li>
+              <li><a href="#">lien sous menu</a></li>
+              <li><a href="#">lien sous menu</a></li>
+            </ul>
+          </li>
+          <li>
+            <label for="tab-2.3">titre 2.3</label>
+            <input type="checkbox" id="tab-2.3">
+
+            <ul>
+              <li><a href="#">lien sous menu</a></li>
+              <li><a href="#">lien sous menu</a></li>
+              <li><a href="#">lien sous menu</a></li>
+              <li><a href="#">lien sous menu</a></li>
+            </ul>
+          </li>
+          </ul>
+          </li>
+        </ul>
     </nav>
+<p>troptropcool si ti me pousse paaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaas</p>
+<p>troptropcool si ti me pousse paaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaas</p>
+<p>troptropcool si ti me pousse paaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaas</p>
+<p>troptropcool si ti me pousse paaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaas</p>
   </body>
 </html>
